# colorust

./: Cargo.toml
src/: ffmpeg.rs  gui.rs  lib.rs  main.rs  mlt.rs
