[package]
name = "colorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simple_logger = "4.3.3"
color-eyre = { version = "0.6.3", default-features = false }
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
egui_file = "0.17.0"
egui_plot = "0.27.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.115"
image = "0.25.1"
flume = "0.11"
temp-dir = "0.1.13"
typetag = "0.2.16"
roxmltree = "0.19.0"
clap = { version = "4.5.4", features = ["derive"] }
regex = "1"

[profile.release]
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3
