[package]
name = "colorust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simple_logger = "5.0.0"
color-eyre = { version = "0.6.3", default-features = false }
egui = "0.30.0"
eframe = { version = "0.30.0", features = ["persistence"] }
egui_file = "0.20.0"
egui_plot = "0.30.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.134"
image = "0.25.5"
flume = "0.11"
temp-dir = "0.1.14"
typetag = "0.2.19"
roxmltree = "0.20.0"
clap = { version = "4.5.23", features = ["derive"] }
regex = "1"

[profile.release]
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3
